# backend

./: .example.env  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  example.env
.github/workflows/: ci.yml
deployment/: backend-deployment.yaml  cnp.yaml  external-secret.yaml  frontend-deployment.yaml  ingress.yaml  postgres-db.yaml
service/: .gitignore  Dockerfile  README.md  pyproject.toml
service/app/: create_tables.py  database.py  main.py
service/app/middlewares/: auth_middleware.py
service/app/models/: Plan.py  User.py  plan.py  user.py
service/app/routers/: config_router.py  plan_router.py  user_router.py
service/app/schemas/: plan.py
service/app/services/: plan_service.py  user_service.py
service/tests/: conftest.py  test_config.py  test_example.py  test_main_router.py  test_models.py  test_plan_router.py
traefik/: docker-compose.yml  traefik.yml
