[project]
name = "service"
version = "0.1.0"
description = "FastAPI backend service for lost.university"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary,pool]>=3.2.6",
    "sqlmodel>=0.0.24",
    "clerk_backend_api",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    #### Modules
    "D",    # pydocstyle
    "TID",  # flake8-tidy-imports
    "COM",  # flake8-commas 

    #### specific rules
    "T201", # print statements

    #### tests
    "S101", # asserts allowed in tests
    "PLR2004", # Magic value used in comparison
]

[tool.coverage.report]
skip_empty = true
omit = [
    "app/middlewares/*",
    "app/create_tables.py",
]
